Resolved all issues

--- a/recipes/Momo.html
+++ b/recipes/Momo.html
@@ -1,37 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Momo_Recipe</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Momo Recipe</title>
+  </head>
+  <body>
     <h1>Momo</h1>
-    <img src="Momo-Img.jpg" style = "width:70%">
-    <p>Momo is made from wheat flour, vegetable oil, chopped onion, garlic, sesame, green chilies, tomatoes, meat (preferably beef), mustard powder, ginger juice and a blend of Nepalese herbal spices. 
+    <img src="Momo-Img.jpg" style="width: 70%" />
+    <p>
+      Momo is made from wheat flour, vegetable oil, chopped onion, garlic,
+      sesame, green chilies, tomatoes, meat (preferably beef), mustard powder,
+      ginger juice and a blend of Nepalese herbal spices.
     </p>
     <h2>Ingredients</h2>
     <ul>
-        <li>3/4 cup All Purpose Flour (Maida)</li>
-        <li>3-4 cloves of Garlic, finely chopped</li>
-        <li>1/4 cup finely chopped Green French Beans (fanasi)</li>
-        <li>Salt to taste</li>
+      <li>3/4 cup All Purpose Flour (Maida)</li>
+      <li>3-4 cloves of Garlic, finely chopped</li>
+      <li>1/4 cup finely chopped Green French Beans (fanasi)</li>
+      <li>Salt to taste</li>
     </ul>
     <h2>Steps</h2>
     <ol>
-        <li>Finely cut all vegetables as mentioned in the ingredients section.</li>
-        <li>Add 3/4 cup maida (all purpose flour), 1 teaspoon oil and salt in a large bowl.</li>
-        <li>Mix all ingredients well and prepare a soft pliable dough (like paratha dough) by adding water as needed. 
-            Cover the dough and keep it aside for 20-25 minutes.</li>
-        <li>Heat 1 tablespoon oil in a pan over medium flame. Add finely chopped ginger and garlic and sauté for 30 seconds. 
-            Add green onion and sauté for a minute.</li>
-        <li>Place stand in the steamer and place momos plate over it. 
-            Momos should not touch the water. Cover the steamer/vessel with a lid 
-            and steam them for 6-7 minutes over medium flame or until they look 
-            little translucent and shiny. Remove the lid and check them by touching it. 
-            If they don’t feel sticky then it means they are cooked.</li>
-        <li>Transfer them to a serving plate. Serve hot Veg Momos with Momos Chutney or Schezwan Sauce.</li>
+      <li>
+        Finely cut all vegetables as mentioned in the ingredients section.
+      </li>
+      <li>
+        Add 3/4 cup maida (all purpose flour), 1 teaspoon oil and salt in a
+        large bowl.
+      </li>
+      <li>
+        Mix all ingredients well and prepare a soft pliable dough (like paratha
+        dough) by adding water as needed. Cover the dough and keep it aside for
+        20-25 minutes.
+      </li>
+      <li>
+        Heat 1 tablespoon oil in a pan over medium flame. Add finely chopped
+        ginger and garlic and sauté for 30 seconds. Add green onion and sauté
+        for a minute.
+      </li>
+      <li>
+        Place stand in the steamer and place momos plate over it. Momos should
+        not touch the water. Cover the steamer/vessel with a lid and steam them
+        for 6-7 minutes over medium flame or until they look little translucent
+        and shiny. Remove the lid and check them by touching it. If they don’t
+        feel sticky then it means they are cooked.
+      </li>
+      <li>
+        Transfer them to a serving plate. Serve hot Veg Momos with Momos Chutney
+        or Schezwan Sauce.
+      </li>
     </ol>
-</body>
+  </body>
 </html>
