--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Odin_Recipes</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Odin Recipes</title>
+  </head>
+  <body>
     <h1>Odin Recipes</h1>
     <ul>
-        <li><a href="recipes/lasagna.html">lasagna_Recipe</a></li>
-        <li><a href="recipes/Pizza.html">Pizza_Recipe</a></li>
-        <li><a href="recipes/Momo.html">Momo_Recipe</a></li>
+      <li><a href="recipes/lasagna.html">lasagna Recipe</a></li>
+      <li><a href="recipes/Pizza.html">Pizza Recipe</a></li>
+      <li><a href="recipes/Momo.html">Momo Recipe</a></li>
     </ul>
-</body>
+  </body>
 </html>
