--- a/recipes/Pizza.html
+++ b/recipes/Pizza.html
@@ -1,36 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pizza_Recipe</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Pizza Recipe</title>
+  </head>
+  <body>
     <h1>Pizza</h1>
-    <img src="Pizza-Img.jpg" style = "Width: 70%">
-    <p>pizza, dish of Italian origin consisting of a flattened disk of bread 
-        dough topped with some combination of olive oil, oregano, tomato, 
-        olives, mozzarella or other cheese, and many other ingredients, baked
-         quickly—usually, in a commercial setting, using 
-        a wood-fired oven heated to a very high temperature—and served hot 
+    <img src="Pizza-Img.jpg" style="width: 70%" />
+    <p>
+      pizza, dish of Italian origin consisting of a flattened disk of bread
+      dough topped with some combination of olive oil, oregano, tomato, olives,
+      mozzarella or other cheese, and many other ingredients, baked
+      quickly—usually, in a commercial setting, using a wood-fired oven heated
+      to a very high temperature—and served hot
     </p>
     <h2>Ingredients</h2>
     <ul>
-        <li>Pizza Dough</li>
-        <li>Pizza Sauce</li>
-        <li>Cheese</li>
-        <li>salt</li>
+      <li>Pizza Dough</li>
+      <li>Pizza Sauce</li>
+      <li>Cheese</li>
+      <li>salt</li>
     </ul>
     <h2>Steps</h2>
     <ol>
-        <li>Start with a solid pizza dough recipe.</li>
-        <li>Make the dough.</li>
-        <li>Proof the dough.
-        </li>
-        <li>Prepare the sauce and toppings.</li>
-        <li>Shape the dough.</li>
-        <li>Bake the pizza.</li>
+      <li>Start with a solid pizza dough recipe.</li>
+      <li>Make the dough.</li>
+      <li>Proof the dough.</li>
+      <li>Prepare the sauce and toppings.</li>
+      <li>Shape the dough.</li>
+      <li>Bake the pizza.</li>
     </ol>
-</body>
+  </body>
 </html>
